# esp32-epd-12in48-rs

./: .gitignore  Cargo.toml  LICENSE
src/: esp32_epd_12in48.rs  main.rs
