[package]
name = "esp32-epd-12in-46-RS"
version = "0.1.0"
authors = ["F-Bh <72809273+F-bh@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[dependencies]
hal = { package = "esp32-hal", version = "0.12.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32"] }
derive-new = "0.5.9"
